--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Settlement Calculator</title>
+    <title>Responsive Settlement Calculator</title>
     <style>
         /* General Styles */
         * {
@@ -18,14 +18,15 @@
             align-items: center;
             min-height: 100vh;
             background-color: #f7f9fc;
+            padding: 20px;
         }
 
         /* Calculator Container */
         .calculator {
             background-color: #ffffff;
-            width: 80%;
-            max-width: 600px;
-            padding: 30px;
+            width: 100%;
+            max-width: 500px;
+            padding: 20px;
             border-radius: 12px;
             box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.15);
             color: #333;
@@ -33,8 +34,8 @@
         h2 {
             text-align: center;
             color: #4A90E2;
-            font-size: 1.8em;
-            margin-bottom: 25px;
+            font-size: 1.6em;
+            margin-bottom: 20px;
             font-weight: bold;
         }
 
@@ -45,10 +46,10 @@
             margin-bottom: 20px;
         }
         .table th, .table td {
-            padding: 15px;
+            padding: 12px;
             text-align: left;
             border-bottom: 1px solid #eaeaea;
-            font-size: 1em;
+            font-size: 0.9em;
         }
         .table th {
             background-color: #f0f4f8;
@@ -58,12 +59,12 @@
             font-weight: bold;
             color: #4A90E2;
         }
-        
+
         /* Input Field Styles */
         input[type="number"] {
             width: 100%;
-            padding: 10px;
-            font-size: 1em;
+            padding: 8px;
+            font-size: 0.9em;
             border: 1px solid #ddd;
             border-radius: 6px;
             outline: none;
@@ -77,12 +78,29 @@
         .final-result {
             text-align: center;
             color: #D9534F;
-            font-size: 1.4em;
+            font-size: 1.2em;
             font-weight: bold;
             margin-top: 20px;
             padding: 10px 0;
             border-radius: 8px;
             background-color: #fef4f4;
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 480px) {
+            h2 {
+                font-size: 1.4em;
+            }
+            .table th, .table td {
+                padding: 10px;
+                font-size: 0.85em;
+            }
+            .final-result {
+                font-size: 1em;
+            }
+            .calculator {
+                padding: 15px;
+            }
         }
     </style>
 </head>
@@ -170,5 +188,6 @@
     </script>
 </body>
 </html>
+
 
 
