--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 </head>
 <body>
     <div class="calculator">
-        <h2>MB Settlement Calculator</h2>
+        <h2>Settlement Calculator</h2>
         
         <!-- Powered by Logo -->
         <div class="powered-by">Powered by <img src="https://d3ka6l1e5o2tqs.cloudfront.net/media/public/default_images/Mb_logo.png" alt="Medikabazaar Logo"></div>
