Left aligned model type

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <table class="table">
             <!-- Model Type Field -->
             <tr>
-                <th style="text-align: center;">Model Type</th>
+                <th style="text-align: left;">Model Type</th>
                 <td>
                     <select id="modelType" onchange="calculatePayout()">
                         <option value="O">Order only Model (O)</option>
