--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 </div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col"><a href="#" class="btn btn-link"
+                        <div class="col"><a href="" class="btn btn-link"
                                 onclick="downloadTemplate()">Download
                                 Sample Template</a></div>
                     </div>
